# smw-empscripten

./: CMakeLists.txt  EMSCRIPTEN.md  Makefile  extract_assets.bat  nobuild.c  nobuild.h  shell.html
.github/workflows/: build-windows.yaml  deploy.yml
smb1/: CMakeLists.txt  smb1_00.c
smbll/: CMakeLists.txt
smw-widescreen-v111/: smw-extrawide-raw.bps
src/: CMakeLists.txt  CustomPhys.h  common_cpu_infra.c  common_rtl.c  common_rtl.h  main.c  main.c.bak
